content: Update home title to New Year 2026

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <title>Тайны Таиланда 🇹🇭</title>
+    <title>Новый год 2026 в Тайланде 🇹🇭</title>
     <style>
 :root {
   --color-white: rgba(255, 255, 255, 1);
@@ -987,7 +987,7 @@ textarea {
         <!-- Home Screen -->
         <div id="home" class="screen active">
             <div class="home-hero">
-                <h1>Тайны Таиланда 🇹🇭</h1>
+                <h1>Новый год 2026 в Тайланде 🇹🇭</h1>
                 <p>Семейное приключение</p>
                 <div class="countdown">
                     <div class="countdown-label">До начала путешествия</div>
