--- a/public/index.html
+++ b/public/index.html
@@ -1205,6 +1205,6 @@ textarea {
         </div>
     </div>
 
-    <script src="app.js?v=1763847021"></script>
+    <script src="app.js?v=$VERSION"></script>
 </body>
 </html>
