--- a/spa-app/index.html
+++ b/spa-app/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>spa-app</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="theme-color" content="#667eea" />
+    <title>Thailand Family Trip</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="width: 100%; height: 100%; display: flex;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
